--- a/React/final-report-group-8/src/App.css
+++ b/React/final-report-group-8/src/App.css
@@ -1,7 +1,11 @@
 .Shop {
-    margin-top: 50px;
+    margin-top: 10px;
     width: 100%;
     width: 860px;
+}
+
+a{
+    margin: 0 10px;
 }
 
 @page {
